# Geometry

./: CMakeLists.txt  README.md  main.cpp
include/: binary_tree.h  doubly_connected_edge_list.h  segment_tree.h
src/: doubly_connected_edge_list.cpp  segment_tree.cpp
test/: segment_tree_test.cpp
